Switch source compatibility version to 8. Run tests on 17 since that is our Forge target and Java 8 is missing the required ZipFS anyway.
Force Java 8 Compiler.